--- a/tictactoe-react/package.json
+++ b/tictactoe-react/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
