--- a/apps-solution/package.json
+++ b/apps-solution/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
