--- a/submission-personal-notes/package.json
+++ b/submission-personal-notes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-personal-notes",
+  "name": "submission-personal-notes",
   "version": "0.1.0",
   "private": true,
   "type": "module",
